Fix back link - node-type-document

--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -2512,7 +2512,8 @@ span.pages {
 .publication-detail.campaign-materials {
   clear: both;
 }
-.node-type-campaign-materials .back-to-publications {
+.node-type-campaign-materials .back-to-publications,
+.node-type-document .back-to-publications {
   padding-left: 0;
 }
 /* Footer */
