--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2897,7 +2897,7 @@ span.pages{
 	clear: both;
 }
 
-.node-type-campaign-materials{
+.node-type-campaign-materials, .node-type-document{
 	.back-to-publications{
 		padding-left: 0;
 	}
