--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -2897,7 +2897,7 @@ span.pages{
 	clear: both;
 }
 
-.node-type-campaign-materials{
+.node-type-campaign-materials, .node-type-document{
 	.back-to-publications{
 		padding-left: 0;
 	}
@@ -7104,7 +7104,7 @@ body.front-page{
 		}
 
 		#block-hwc-homepage-hwc-homepage-news-events{
-			padding-bottom: 3em;
+			padding-bottom: 0;
 			.before-the-campaign{
 				background: transparent;
 				.content-box-before{
@@ -7777,6 +7777,7 @@ body.page-tools-and-publications-publications{
 		.block-hwc-priority-areas{
 			background: #eceaea;
 			float: left;
+			width: 100%;
     		.field-name-title-field{
     			div{
     				div{
