--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7861,6 +7861,8 @@ body.page-tools-and-publications-publications{
 			font-size: 2.5rem;
 		    padding: 0.5em;
 		    text-align: center;
+		    margin-left: 0;
+		    margin-right: 0;
 		}
 
 		.content{
@@ -8520,3 +8522,38 @@ body.video-page{
 	}	
 }
 
+
+/* Good practice exchange platform */
+
+.page-good-practice-exchange-platform{
+	.view-documents{
+		ul{
+			li{
+				.content{
+					margin-top: 0.3em;
+    				margin-bottom: 0.3em;
+    				.publication-ext-type{
+    					img{
+    						border: 0;
+    						border-radius: 0;
+    					}
+    				}
+				}
+			}
+		}
+	}
+}
+
+.page-partners-documents{
+	.region.region-content{
+		.view-search {
+			.view-content{
+				.views-row{ 
+					.views-field-field-document-files{
+						margin-top: 0;
+					}
+				}
+			}
+		}
+	}
+}
