MDR-3429 - Non topic related content upload (Module_1)

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -4725,7 +4725,7 @@ body{
 	.boxes{
 		position: relative;
 		.box{
-			width: 184px;
+			width: 197px;
 			border: 2px solid #8ea64b;
 			background: #FFF;
 			height: auto;
@@ -4744,6 +4744,19 @@ body{
 					padding-right: 35px;
 					border-radius: 3px;
 					text-decoration: none;
+					display: inline-block;
+    				max-width: 171px;
+				}
+				.btn-become-partner-register{
+					text-align: left;
+					border: 1px solid #0030a0;
+					color: #0030a0;
+					padding-left: 10px;
+					padding-right: 10px;
+					border-radius: 3px;
+					text-decoration: none;
+					display: inline-block;
+    				max-width: 171px;
 				}
 			}
 			
