--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7839,7 +7839,7 @@ body.page-tools-and-publications-publications{
 				background: none;
 			}
 
-			.node-news{
+			.node-news, .node-pa-highlights{
 				.content{
 					background: url(../images/green-line.png) repeat-x;
 					padding-top: 1em;
@@ -7857,6 +7857,12 @@ body.page-tools-and-publications-publications{
 					width: auto;
 					min-height: 90px;
 				    margin-right: 0;
+				    float: left;
+				    img {
+			    		margin-top: 0.3em;
+			    		margin-bottom: 0em;
+			    		margin-right: 1em;
+					}
 				}
 				a.more-link{
 					justify-content: left;
