--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -8576,3 +8576,17 @@ body.video-page{
 		}
 	}
 }
+
+.node-type-pa-highlights{
+	.node-pa-highlights{
+		.field-name-field-image{
+		float: left;
+			img{
+				margin-top: 0.3em;
+				margin-bottom: 0em;
+				margin-right: 1em;
+			}
+
+		}
+	}
+}
