--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -7839,6 +7839,12 @@ body.page-tools-and-publications-publications{
 				background: none;
 			}
 
+			.field-name-field-pa-recommended-resources{
+				.node-pa-highlights{
+					width: 100%;
+				}
+			}
+
 			.node-news, .node-pa-highlights{
 				.content{
 					background: url(../images/green-line.png) repeat-x;
@@ -7875,7 +7881,7 @@ body.page-tools-and-publications-publications{
 		h2.block-title{
 			float: left;
 	    	width: 100%;
-			background: url(../images/background-newsletter-300.png) no-repeat;
+			background: url(../images/background-priority.png) no-repeat;
 			color: #FFF;
 			font-size: 2.5rem;
 		    padding: 0.5em;
@@ -8133,6 +8139,9 @@ body.page-tools-and-publications-practical-tools{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    .two-box-column{
+    	width: 100%;
+    }
 	.box-before.news{
 		background: #FFF;
 		float: left;
