HW20-465 - In the Press Room the introductory text is still justified to the left

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -5631,8 +5631,9 @@ ul[data-sa-theme="basic-green"].ui-menu{
 /* Press room */
 body.press-room{
 	.field-name-body{
-		width: 76%;
-    	padding-left: 2.2em;
+		width: 100%;
+		text-align: center;
+		padding: 0.6em 0.5em;
 	}
 	.related-resources-title{
 		padding-top: 1em;
