--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -4867,8 +4867,9 @@ ul[data-sa-theme="basic-green"].ui-menu {
 }
 /* Press room */
 body.press-room .field-name-body {
-  width: 76%;
-  padding-left: 2.2em;
+  width: 100%;
+  text-align: center;
+  padding: 0.6em 0.5em;
 }
 body.press-room .related-resources-title {
   padding-top: 1em;
