--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1086,7 +1086,7 @@ ul.time-and-counters{
 		border-bottom-left-radius: 3px;
 		border-top-right-radius: 15px;
 		border-bottom-right-radius: 15px;
-		background: url(../images/ico-plus-20-hover-plus.png) no-repeat 98% 0px;
+		background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
 		padding-right: 2em;
 		transition: 300ms;
 	}
@@ -3114,7 +3114,7 @@ body.good-practice-exchange{
 							border-bottom-left-radius: 3px;
 							border-top-right-radius: 15px;
 							border-bottom-right-radius: 15px;
-							background: url(../images/ico-plus-20-hover-plus.png) no-repeat 98% 0px;
+							background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
 							padding-right: 2em;
 					    }
 					    &:before{
@@ -3410,6 +3410,11 @@ div.workbench-info-block{
 			width: 94%;
 		}
 	}
+
+	.external-menu-item{
+		background: url('../images/target-blank-blue.png') 90% no-repeat #ecf4cb;
+		padding-right: 45px !important;
+	}
 }
 
 
@@ -3421,6 +3426,10 @@ div.workbench-info-block{
 .left-menu.accordion-menu ul li ul li ul li:hover a{
 	background: #0030a0;
     color: #FFF;
+}
+
+.accordion-menu.left-menu ul li.expanded a.external-menu-item:hover {
+    background: url('../images/target-blank-white-12.png') 90% no-repeat #0030a0;
 }
 
 .accordion-menu.left-menu ul li.expanded a:hover {
@@ -5977,7 +5986,7 @@ body.press-room, body.european-week{
 				border-bottom-left-radius: 3px;
 				border-top-right-radius: 15px;
 				border-bottom-right-radius: 15px;
-				background: url(../images/ico-plus-20-hover-plus.png) no-repeat 98% 0px;
+				background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
 				padding-right: 2em;
 		    }
 	    	&:before{
@@ -7209,7 +7218,7 @@ body.front-page{
 													border-bottom-left-radius: 3px;
 													border-top-right-radius: 15px;
 													border-bottom-right-radius: 15px;
-													background: url(../images/ico-plus-20-hover-plus.png) no-repeat 98% 0px;
+													background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
 													padding-right: 2em;
 											    }
 											    &:before{
@@ -8313,7 +8322,7 @@ body.page-tools-and-publications-practical-tools{
 					border-bottom-left-radius: 3px;
 					border-top-right-radius: 15px;
 					border-bottom-right-radius: 15px;
-					background: url(../images/ico-plus-20-hover-plus.png) no-repeat 98% 0px;
+					background: url(../images/ico-plus-green.png) no-repeat 91% 4px;
 					padding-right: 2em;
 			    }
 		    	&:before{
