--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -1600,6 +1600,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 
 #block-menu-block-4{
 	width: 100%;
+	margin-top: 47px;
 }
 
 
@@ -3216,7 +3217,7 @@ body.good-practice-exchange{
 .page-search{
 
 	.region-sidebar-first .block.block-facetapi:first-child {
-	    margin-top: 41px!important;
+	    margin-top: 44px!important;
 	}
 
 	.views-row img{
@@ -3470,6 +3471,7 @@ div.workbench-info-block{
 
 .accordion-menu{
 	float: left;
+	margin-top: 47px;
 }
 
 .main-container{
@@ -8608,4 +8610,11 @@ body.video-page{
 
 		}
 	}
+}
+
+
+/* Cookies banner */
+
+#sliding-popup.sliding-popup-top, #sliding-popup.sliding-popup-top .eu-cookie-withdraw-banner, .eu-cookie-withdraw-tab {
+    background: url('../images/background-cookies.png') repeat;
 }
