--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-responsive-max-992.less
@@ -169,7 +169,9 @@
 		padding-top: 0;
 	}
 
-
+	#block-menu-block-4, .accordion-menu{
+		margin-top: 0;
+	}
 
 	.navbar-default{
 		border-color: transparent;
