--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -20314,6 +20314,7 @@ blockquote.image-field-caption {
   margin: 0;
   width: 100%;
   font-size: 10px;
+  color: #57575a;
 }
 blockquote.image-field-caption p {
   z-index: 999;
