--- a/docroot/sites/all/themes/hwc_frontend/less/content.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/content.less
@@ -11356,6 +11356,7 @@ blockquote.image-field-caption {
     margin: 0;
     width: 100%;
     font-size: 10px;
+    color: #57575a;
     p{
 	  	z-index: 999;
 	    position: relative;
