HW20-486 - UX: Depending on the level change the banner titles

--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20.less
@@ -297,6 +297,9 @@ select{
 .main-container{
 	h2{
 		color: #003399;
+		font-weight: 400;
+		padding-top: 0;
+		margin-top: 0;
 		a:before{
 			content: '';
 			padding-right: 0;
@@ -1600,7 +1603,7 @@ input[type="checkbox"]:checked + label .my-checkbox:after {
 
 #block-menu-block-4{
 	width: 100%;
-	margin-top: 47px;
+	margin-top: 49px !important;
 }
 
 
@@ -2057,7 +2060,7 @@ aside.col-md-3{
     padding: 0 0 0 1em;
     border: 0;
     border-radius: 5px;
-   	margin-top: 16px !important;
+   	margin-top: 8px !important;
     width: 100%;
 }
 
@@ -7852,8 +7855,13 @@ body.page-tools-and-publications-publications{
 			}
 
 			.field-name-field-pa-recommended-resources{
+				.field-item{
+					padding-bottom: 0.5em;
+				}
+
 				.node-pa-highlights{
 					width: 100%;
+					padding: 0;
 				}
 			}
 
@@ -7873,9 +7881,9 @@ body.page-tools-and-publications-publications{
 				}
 				.field.field-name-field-image{
 					width: auto;
-					min-height: 90px;
 				    margin-right: 0;
 				    float: left;
+				    min-height: 90px;
 				    img {
 			    		margin-top: 0.3em;
 			    		margin-bottom: 0em;
