HW20-480 - UX: Make header smaller - Mock up

--- a/docroot/sites/all/themes/hwc_frontend/css/style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/style.css
@@ -7270,22 +7270,20 @@ header.navbar-default .campaigns-header .navbar-header a.pull-left {
   border-right: 1px solid #003399;
   padding-right: 2em;
   margin-right: 1em;
+  padding-bottom: 7px;
 }
 header.navbar-default .campaigns-header .navbar-header img:nth-child(1) {
-  margin-top: 5px;
-  width: 150px;
-  height: auto;
   margin-left: 30px;
 }
 header.navbar-default .campaigns-header .navbar-header a img.pull-left {
   width: 190px;
   height: auto;
-  margin-top: 44px;
+  margin-top: 23px;
   margin-left: 0px;
 }
 header.navbar-default .campaigns-header .navbar-header img:nth-child(3) {
-  padding-top: 69px;
-  padding-bottom: 32px;
+  padding-top: 36px;
+  padding-bottom: 41px;
   padding-right: 24px;
   width: 89px;
   height: auto;
@@ -7297,7 +7295,7 @@ header.navbar-default .campaigns-header .navbar-header .header-text {
   font-size: 1.6em;
   font-weight: bold;
   max-width: 315px;
-  padding-top: 1em;
+  padding-top: 8px;
   padding-left: 1.5em;
   float: left;
 }
@@ -7397,7 +7395,7 @@ header.navbar-default .campaigns-header .navbar-header #block-search-form #edit-
   margin-bottom: 0px;
 }
 header.navbar-default .campaigns-header .row:first-of-type {
-  padding: 10px 20px 5px 0;
+  padding: 0 20px 0 0;
 }
 header.navbar-default .campaigns-header #block-menu-menu-header-login {
   float: right;
@@ -7442,9 +7440,6 @@ header.navbar-default .campaigns-header #block-hwc-partner-hwc-partner-back-to-p
 header.navbar-default .navbar-collapse {
   padding: 0;
   border: none;
-}
-header.navbar-default .navbar-collapse nav {
-  margin: 10px 0 0;
 }
 header.navbar-default .navbar-collapse nav ul.menu {
   background-color: #003399;
@@ -7596,6 +7591,9 @@ header.navbar-default .navbar-collapse nav ul.menu > li.first a:before {
   height: 19px;
   margin-bottom: 39px;
   background-position: center;
+}
+#navbar > div > div:nth-child(1) {
+  padding: 10px 20px 10px 35px;
 }
 .nav-up {
   top: -210px !important;
