--- a/docroot/sites/all/themes/hwc_frontend/less/header.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/header.less
@@ -458,6 +458,7 @@ header.navbar-default{
 	section, > div {
 		float: left;
 		margin-right: -5px;
+		clear: none;
 	}
 	a#text_resize_increase, a#text_resize_decrease{
 		background: none;
